--- a/index.html
+++ b/index.html
@@ -373,8 +373,9 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start"> 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d249515.68754712408!2d76.49141107996827!3d12.269744200000002!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baf71978ee68f9f%3A0x48ba689d18f68b63!2sSree%20Maruthi%20Borewell%20and%20Drillers%20Mysore!5e0!3m2!1sen!2sin!4v1641598059441!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
+           <div class="google-maps">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d249515.68754712408!2d76.49141107996827!3d12.269744200000002!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baf71978ee68f9f%3A0x48ba689d18f68b63!2sSree%20Maruthi%20Borewell%20and%20Drillers%20Mysore!5e0!3m2!1sen!2sin!4v1641598059441!5m2!1sen!2sin" width="765" height="500" frameborder="3" style="border:0;" allowfullscreen></iframe>
+          </div>
           </div>
 
         </div>
